--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -485,6 +485,10 @@ h6,
 #header1-1 .mbr-section-lead P {
   text-align: left;
 }
+#header3-1b .mbr-section-title,
+#header3-1b .mbr-section-subtitle {
+  text-align: center;
+}
 #menu-0 .hide-buttons .nav-btn {
   display: none !important;
 }
@@ -551,6 +555,15 @@ h6,
 #menu-0 .close-icon::before,
 #menu-0 .close-icon::after {
   background-color: #000000;
+}
+#msg-box5-1a H3 {
+  font-size: 18px;
+}
+#msg-box5-1c H3 {
+  font-size: 18px;
+}
+#msg-box5-1d H3 {
+  font-size: 18px;
 }
 #menu-2 .hide-buttons .nav-btn {
   display: none !important;
@@ -695,71 +708,71 @@ h6,
   font-size: 17px;
   font-family: 'Montserrat', sans-serif;
 }
-#menu-n .hide-buttons .nav-btn {
+#menu-v .hide-buttons .nav-btn {
   display: none !important;
 }
-#menu-n .navbar-caption {
+#menu-v .navbar-caption {
   color: #ffffff;
 }
-#menu-n .navbar-toggler {
+#menu-v .navbar-toggler {
   color: #000000;
 }
-#menu-n .link,
-#menu-n .dropdown-item {
+#menu-v .link,
+#menu-v .dropdown-item {
   color: #000000;
 }
-#menu-n .link {
+#menu-v .link {
   font-size: 0.75rem;
 }
-#menu-n .dropdown-item,
-#menu-n .nav-dropdown-sm .link {
+#menu-v .dropdown-item,
+#menu-v .nav-dropdown-sm .link {
   font-size: 0.812rem;
 }
-#menu-n .link:hover,
-#menu-n .dropdown-item:hover,
-#menu-n .link:focus,
-#menu-n .dropdown-item:focus {
+#menu-v .link:hover,
+#menu-v .dropdown-item:hover,
+#menu-v .link:focus,
+#menu-v .dropdown-item:focus {
   color: #c0a375;
 }
-#menu-n .link[aria-expanded="true"],
-#menu-n .dropdown-menu {
+#menu-v .link[aria-expanded="true"],
+#menu-v .dropdown-menu {
   background: #e6e6e6;
 }
-#menu-n .nav-dropdown-sm .link:focus,
-#menu-n .nav-dropdown-sm .link:hover,
-#menu-n .nav-dropdown-sm .dropdown-item:focus,
-#menu-n .nav-dropdown-sm .dropdown-item:hover {
+#menu-v .nav-dropdown-sm .link:focus,
+#menu-v .nav-dropdown-sm .link:hover,
+#menu-v .nav-dropdown-sm .dropdown-item:focus,
+#menu-v .nav-dropdown-sm .dropdown-item:hover {
   background: #f7f7f7!important;
 }
-#menu-n .navbar,
-#menu-n .nav-dropdown-sm,
-#menu-n .nav-dropdown-sm .link[aria-expanded="true"],
-#menu-n .nav-dropdown-sm .dropdown-menu {
+#menu-v .navbar,
+#menu-v .nav-dropdown-sm,
+#menu-v .nav-dropdown-sm .link[aria-expanded="true"],
+#menu-v .nav-dropdown-sm .dropdown-menu {
   background: #ffffff;
 }
-#menu-n .bg-color.transparent .link {
+#menu-v .bg-color.transparent .link {
   color: #000000;
   transition: none;
 }
-#menu-n .bg-color.transparent.opened .link {
+#menu-v .bg-color.transparent.opened .link {
   transition: color 0.2s ease-in-out;
 }
-#menu-n .bg-color.transparent.opened .link:hover,
-#menu-n .bg-color.transparent.opened .link:focus {
+#menu-v .bg-color.transparent.opened .link:hover,
+#menu-v .bg-color.transparent.opened .link:focus {
   color: #c0a375;
 }
-#menu-n .link[aria-expanded="true"],
-#menu-n .dropdown-item[aria-expanded="true"] {
+#menu-v .link[aria-expanded="true"],
+#menu-v .dropdown-item[aria-expanded="true"] {
   color: #c0a375!important;
 }
-#menu-n.mbr-navbar--stuck .mbr-navbar__section {
+#menu-v.mbr-navbar--stuck .mbr-navbar__section {
   background: #2c2c2c;
 }
-#menu-n .mbr-navbar__hamburger {
+#menu-v .mbr-navbar__hamburger {
   color: #ffffff;
 }
-#menu-n .close-icon::before,
-#menu-n .close-icon::after {
+#menu-v .close-icon::before,
+#menu-v .close-icon::after {
   background-color: #000000;
 }
 #menu-p .hide-buttons .nav-btn {
